[project]
name = "optilayer"
version = "0.1.0"
description = ""
authors = [
    {name = "Chase Minter",email = "c.minter@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "anthropic (>=0.73.0,<0.74.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
